[workspace]
members = [
  "crates/nbx-wallet",
  "crates/nbx-crypto",
  "crates/nbx-nockchain-math",
  "crates/nbx-nockchain-types",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies.nbx-wallet]
path = "crates/nbx-wallet"

[workspace.dependencies.nbx-crypto]
path = "crates/nbx-crypto"

[workspace.dependencies.nbx-nockchain-math]
path = "crates/nbx-nockchain-math"

[workspace.dependencies.nbx-nockchain-types]
path = "crates/nbx-nockchain-types"

[workspace.dependencies]
nockvm = { git = "https://github.com/zorp-corp/nockchain.git" }
nockchain-math = { git = "https://github.com/zorp-corp/nockchain.git" }
ibig = "0.3"
