[package]
name = "iris-crypto"
version.workspace = true
edition.workspace = true
keywords = ["nockchain", "iris", "wallet", "nock"]
license = "MIT"
repository = "https://github.com/nockbox/iris-rs"
rust-version = "1.85.0"
description = "Cryptographic primitives for Iris Nockchain Wallet"
documentation = "https://docs.rs/iris-crypto"
homepage = "https://nockbox.org"
authors = ["NockBox inc. <tech@nockbox.org>"]

[dependencies]
iris-ztd = { workspace = true }
iris-ztd-derive = { workspace = true }
ibig = { workspace = true }
bip39 = { version = "2.0", default-features = false, features = ["alloc", "std"] }
argon2 = { version = "0.5", default-features = false, features = ["alloc"] }
hmac = "0.12"
sha2 = "0.10"
bs58 = { version = "0.5", default-features = false, features = ["alloc"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
hex = "0.4"
