[package]
name = "iris-crypto"
version.workspace = true
edition.workspace = true
keywords = ["nockchain", "iris", "wallet", "nock"]
license = "MIT"
repository = "https://github.com/nockbox/iris-rs"
rust-version = "1.85.0"
description = "Cryptographic primitives for Iris Nockchain Wallet"
documentation = "https://docs.rs/iris-crypto"
homepage = "https://nockbox.org"
authors = ["NockBox inc. <tech@nockbox.org>"]

[dependencies]
iris-ztd = { workspace = true }
iris-ztd-derive = { workspace = true }
ibig = { workspace = true }
bip39 = { version = "2.0", default-features = false, features = ["alloc"], optional = true }
argon2 = { version = "0.5.3", default-features = false, features = ["alloc"], optional = true }
hmac = { version = "0.12", default-features = false }
sha2 = { version = "0.10", default-features = false }
bs58 = { version = "0.5", default-features = false, features = ["alloc"] }
serde = { workspace = true }

[dev-dependencies]
hex = "0.4"

[features]
default = ["argon2", "mnemonic"]
mnemonic = ["dep:bip39"]
