[package]
name = "iris-grpc-proto"
version.workspace = true
edition.workspace = true
keywords = ["nockchain", "iris", "wallet", "nock"]
license = "MIT"
repository = "https://github.com/nockbox/iris-rs"
rust-version = "1.88.0"
description = "Nockchain gRPC protobuf definitions"
documentation = "https://docs.rs/iris-grpc-proto"
homepage = "https://nockbox.org"
authors = ["NockBox inc. <tech@nockbox.org>"]

[dependencies]
iris-nockchain-types = { workspace = true }
iris-ztd = { workspace = true, features = ["default"] }
prost = "0.13"
prost-types = "0.13"
tonic = { version = "0.12", default-features = false, features = ["codegen", "prost"] }
thiserror = "2.0"
bip39 = "2.2.0"
serde = { workspace = true }
ibig = { workspace = true }
iris-crypto = { workspace = true }
tsify = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tonic = { version = "0.12", features = ["transport"] }

[dev-dependencies]
iris-crypto = { workspace = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1"

[build-dependencies]
glob = "0.3"
prost-build = "0.13"
regex = "1"
tonic-build = "0.12"

[features]
wasm = ["iris-ztd/wasm", "iris-nockchain-types/wasm", "tsify", "wasm-bindgen"]
private-api = []
server = ["tonic/server", "tonic/transport"]