[package]
name = "iris-nockchain-types"
version.workspace = true
edition.workspace = true
keywords = ["nockchain", "iris", "wallet", "nock"]
license = "MIT"
repository = "https://github.com/nockbox/iris-rs"
rust-version = "1.91.0"
description = "Nockchain types for Iris wallet"
documentation = "https://docs.rs/iris-nockchain-types"
homepage = "https://nockbox.org"
authors = ["NockBox inc. <tech@nockbox.org>"]

[dependencies]
bs58 = { version = "0.5", default-features = false, features = ["alloc"] }
iris-ztd = { workspace = true, features = ["default"] }
iris-ztd-derive = { workspace = true }
bip39 = { version = "2.0", default-features = false, features = ["alloc", "std"] }
iris-crypto = { workspace = true, features = ["default"] }
serde = { workspace = true }
thiserror = "2.0"
ibig = { workspace = true }
hex = "0.4"
tsify = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }

[features]
wasm = ["iris-ztd/wasm", "tsify", "wasm-bindgen"]