[package]
name = "iris-wasm"
version.workspace = true
edition.workspace = true
keywords = ["nockchain", "iris", "wallet", "nock"]
license = "MIT"
repository = "https://github.com/nockbox/iris-rs"
rust-version = "1.85.0"
description = "WASM bindings for Iris wallet"
documentation = "https://docs.rs/iris-wasm"
homepage = "https://nockbox.org"
authors = ["NockBox inc. <tech@nockbox.org>"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
iris-crypto = { workspace = true }
iris-nockchain-types = { workspace = true }
iris-ztd = { workspace = true }
iris-grpc-proto = { workspace = true }
ibig = { workspace = true }
bip39 = { version = "2.0", default-features = false, features = ["alloc", "std"] }
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"
tonic-web-wasm-client = "0.6"
web-sys = { version = "0.3", features = ["console"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
