[package]
name = "iris-ztd-derive"
version.workspace = true
edition.workspace = true
keywords = ["nockchain", "iris", "wallet", "nock"]
license = "MIT"
repository = "https://github.com/nockbox/iris-rs"
rust-version = "1.85.0"
description = "Derive macros for iris-ztd"
documentation = "https://docs.rs/iris-ztd-derive"
homepage = "https://nockbox.org"
authors = ["NockBox inc. <tech@nockbox.org>"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
