[package]
name = "iris-ztd"
version.workspace = true
edition.workspace = true

[dependencies]
bs58 = { version = "0.5", default-features = false, features = ["alloc"] }
bitvec = { version = "1.0", default-features = false, features = ["alloc"] }
ibig = { workspace = true }
arrayref = "0.3"
num-traits = { version = "0.2", default-features = false }
serde = { workspace = true }
