[package]
name = "nbx-nockchain-math"
version = "0.1.0"
edition = "2021"

[dependencies]
bs58 = { version = "0.5", default-features = false, features = ["alloc"] }
ibig = { workspace = true }
once_cell = "1.21"
arrayref = "0.3"
num-traits = { version = "0.2", default-features = false }

[features]
default = ["std"]
std = []
