[package]
name = "nbx-nockchain-types"
version = "0.1.0"
edition = "2021"

[dependencies]
bs58 = { version = "0.5", default-features = false, features = ["alloc"] }
nbx-ztd = { workspace = true }
nbx-ztd-derive = { path = "../nbx-ztd-derive" }
bip39 = { version = "2.0", default-features = false, features = ["alloc", "std"] }
nbx-crypto = { path = "../nbx-crypto" }
serde = { version = "1.0", features = ["derive"], default-features = false }
thiserror = "2.0"
ibig = { workspace = true }
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[features]
default = []
wasm = ["wasm-bindgen", "js-sys", "serde-wasm-bindgen", "nbx-crypto/wasm"]

[lib]
crate-type = ["cdylib", "rlib"]
