[package]
name = "nbx-wasm"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nbx-crypto = { workspace = true }
nbx-nockchain-types = { workspace = true }
nbx-ztd = { workspace = true }
nbx-grpc-proto = { path = "../nbx-grpc-proto" }
ibig = { workspace = true }
bip39 = { version = "2.0", default-features = false, features = ["alloc", "std"] }
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"
tonic-web-wasm-client = "0.6"
web-sys = { version = "0.3", features = ["console"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
